--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="../index.html">INICI</a></li>
                 <li><a href="#">SOBRE MI</a></li>
                 <li><a href="/formulario/form.html">CONTACTE</a></li>
-                <li><a href="/listado/listado.html">LLISTA DE RECEPTES</a></li>
+                <li><a href="/listado/listado.xml">LLISTA DE RECEPTES</a></li>
 
             </ul>
 
